--- a/css/home.css
+++ b/css/home.css
@@ -1,15 +1,29 @@
 .banners {
   display: grid;
+  grid-template-areas:
+  'banner1 banner1 banner1 banner1'
+  'banner2 banner3 banner4 banner5';
+  grid-template-columns:  repeat(4, 1fr)
+
+}
+
+.banners div {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+    height: 30vh;
 }
 
 .banners div:first-of-type {
   grid-area: banner1;
   background-image: url('../img/banner-01.jpg');
+
 }
 
 .banners div:nth-child(2) {
   grid-area: banner2;
   background-image: url('../img/banner-02.jpg');
+
 }
 
 .banners div:nth-child(3) {
@@ -24,4 +38,61 @@
 .banners div:last-of-type {
   grid-area: banner5;
   background-image: url('../img/banner-05.jpg');
+}
+
+.banners div:first-of-type {
+  height: calc(70vh - 56px);
+  overflow: hidden;
+  background-size: contain;  background-color: #f9f9f9
+}
+
+
+@media (max-width: 1300px) {
+  .banners {
+
+
+    grid-template-areas:
+    'banner1 banner1'
+    'banner2 banner3'
+    'banner4 banner5';
+    grid-template-columns:  repeat(2, 1fr)
+
+  }
+  .banners div:first-of-type {
+    background-size: cover
+  }
+
+}
+
+@media (max-width: 1300px) {
+  .banners {
+
+
+    grid-template-areas:
+    'banner1 banner1'
+    'banner2 banner3'
+    'banner4 banner5';
+    grid-template-columns:  repeat(2, 1fr)
+
+  }
+  .banners div:first-of-type {
+    background-size: cover
+  }
+
+}
+
+
+@media (max-width: 700px) {
+  .banners {
+    grid-template-areas:
+    'banner1 '
+    'banner2'
+    'banner3'
+    'banner4'
+    'banner5';
+      grid-template-columns: 1fr;
+
+
+  };
+
 }
